ctm-sf-homeloan-app/main/default/objects/Identification__c/Identification__c.object-meta.xml
<CustomObject>
    <label>Identification</label>
    <nameField>
        <label>Identification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>