ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/CountryOfIssue__c.field-meta.xml
<CustomField>
    <fullName>CountryOfIssue__c</fullName>
    <label>Country Of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>