ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>The number on the identification</description>
    <label>Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>