ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>The type of identification</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IdentificationTypes</valueSetName>
    </valueSet>
</CustomField>