ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/DriversLicenseCardNumber__c.field-meta.xml
<CustomField>
    <fullName>DriversLicenseCardNumber__c</fullName>
    <label>Drivers License Card Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>