ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>Date that identification expires</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>