ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Date that identification was issued</description>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>