ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/IssuedBy__c.field-meta.xml
<CustomField>
    <fullName>IssuedBy__c</fullName>
    <description>Name of whom identification was issued by</description>
    <label>Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>