ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/NameOnDocument__c.field-meta.xml
<CustomField>
    <fullName>NameOnDocument__c</fullName>
    <description>Name of person on the document</description>
    <label>Name On Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>