ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/OriginalOrCertified__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrCertified__c</fullName>
    <description>Whether the document is original or a certified copy</description>
    <label>Original Or Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>