ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/StateIssued__c.field-meta.xml
<CustomField>
    <fullName>StateIssued__c</fullName>
    <description>State where document was issued</description>
    <label>State Issued</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>