ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/VerifiedByAddress__c.field-meta.xml
<CustomField>
    <fullName>VerifiedByAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if document was verified by address</description>
    <label>Verified By Address</label>
    <type>Checkbox</type>
</CustomField>