ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/VerifiedByDOB__c.field-meta.xml
<CustomField>
    <fullName>VerifiedByDOB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if document was verified by date of birth</description>
    <label>Verified By DOB</label>
    <type>Checkbox</type>
</CustomField>