ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/VerifiedByFullName__c.field-meta.xml
<CustomField>
    <fullName>VerifiedByFullName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if document was verified by full name</description>
    <label>Verified By Full Name</label>
    <type>Checkbox</type>
</CustomField>