ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/VerifiedByPhoto__c.field-meta.xml
<CustomField>
    <fullName>VerifiedByPhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if document was verified by photo</description>
    <label>Verified By Photo</label>
    <type>Checkbox</type>
</CustomField>