ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/VerifiedBySignature__c.field-meta.xml
<CustomField>
    <fullName>VerifiedBySignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if document was verified by a signature</description>
    <label>Verified By Signature</label>
    <type>Checkbox</type>
</CustomField>