ctm-sf-homeloan-app/main/default/objects/Identification__c/fields/VisaNumber__c.field-meta.xml
<CustomField>
    <fullName>VisaNumber__c</fullName>
    <label>Visa Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>